--- a/notebooks/headline_aggregator.ipynb
+++ b/notebooks/headline_aggregator.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A notebook for testing headline processing\n",
+    "But this version used the OLD format of the NYT headlines, which were from news-api. Since then, NYT headliens were no longer served by NewsAPI so it needs a separate method. Then, sometime between January and April 2020, newsapi started serving from nytimes.com."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,18 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_dir = \"/home/will/Projects/headliner/datastore/raw/the-new-york-times/\"\n",
+    "base_dir = \"/home/will/Projects/headliner/datastore/raw/the-new-york-times-old/\"\n",
     "begin_date = datetime(2019, 12, 27)\n",
     "end_date = datetime(2019, 12, 27)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,14 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/will/Projects/headliner/datastore/raw/the-new-york-times/the-new-york-times-2019-12-27T00:00:00-p001.json\n"
+      "/home/will/Projects/headliner/datastore/raw/the-new-york-times-old/the-new-york-times-2019-12-27T00:00:00-p001.json\n"
      ]
     }
    ],
@@ -79,22 +87,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['/home/will/Projects/headliner/datastore/raw/the-new-york-times/the-new-york-times-2019-12-27T00:00:00-p001.json',\n",
-       " '/home/will/Projects/headliner/datastore/raw/the-new-york-times/the-new-york-times-2019-12-27T04:00:00-p001.json',\n",
-       " '/home/will/Projects/headliner/datastore/raw/the-new-york-times/the-new-york-times-2019-12-27T08:00:00-p001.json',\n",
-       " '/home/will/Projects/headliner/datastore/raw/the-new-york-times/the-new-york-times-2019-12-27T08:00:00-p002.json',\n",
-       " '/home/will/Projects/headliner/datastore/raw/the-new-york-times/the-new-york-times-2019-12-27T12:00:00-p001.json',\n",
-       " '/home/will/Projects/headliner/datastore/raw/the-new-york-times/the-new-york-times-2019-12-27T16:00:00-p001.json',\n",
-       " '/home/will/Projects/headliner/datastore/raw/the-new-york-times/the-new-york-times-2019-12-27T20:00:00-p001.json']"
+       "['/home/will/Projects/headliner/datastore/raw/the-new-york-times-old/the-new-york-times-2019-12-27T00:00:00-p001.json',\n",
+       " '/home/will/Projects/headliner/datastore/raw/the-new-york-times-old/the-new-york-times-2019-12-27T04:00:00-p001.json',\n",
+       " '/home/will/Projects/headliner/datastore/raw/the-new-york-times-old/the-new-york-times-2019-12-27T08:00:00-p001.json',\n",
+       " '/home/will/Projects/headliner/datastore/raw/the-new-york-times-old/the-new-york-times-2019-12-27T08:00:00-p002.json',\n",
+       " '/home/will/Projects/headliner/datastore/raw/the-new-york-times-old/the-new-york-times-2019-12-27T12:00:00-p001.json',\n",
+       " '/home/will/Projects/headliner/datastore/raw/the-new-york-times-old/the-new-york-times-2019-12-27T16:00:00-p001.json',\n",
+       " '/home/will/Projects/headliner/datastore/raw/the-new-york-times-old/the-new-york-times-2019-12-27T20:00:00-p001.json']"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.0"
   },
   "mimetype": "text/x-python",
   "name": "python",
